Add data services

--- a/Mockup Project/Mockup Project/Views/Shared/_Layout.cshtml
+++ b/Mockup Project/Mockup Project/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     @Styles.Render("~/Header-CSS")
     @RenderSection("CustomCSS", required: false)
 </head>
-<body class="md-skin pace-done fixed-nav fixed-nav-basic fixed-sidebar">
+<body class="md-skin fixed-nav fixed-nav-basic fixed-sidebar">
 
     <div id="wrapper">
         <!--Left navbar-->
@@ -40,10 +40,13 @@
                     <!--./User information-->
                     <!--Dashboard-->
                     <li>
-                        <a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">Quản lý chung</span> <span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">Quản lý chung</span></a>
                     </li>
                     <!--./Dashboard-->
-                    <li> <a href="layouts.html"><i class="fa fa-diamond"></i> <span class="nav-label">Layouts</span></a> </li>
+                    <li> <a href="#"><i class="fa fa-comments-o"></i> <span class="nav-label">Tin nhắn</span> <span class="label label-danger pull-right">23</span></a> </li>
+                    <li> <a href="#"><i class="fa fa-inbox"></i> <span class="nav-label">Đơn hàng</span> <span class="label label-danger pull-right">23</span></a> </li>
+                    <li> <a href="#"><i class="fa fa-tags"></i> <span class="nav-label">Sản phẩm</span> </a> </li>
+                    <li> <a href="#"><i class="fa fa-users"></i> <span class="nav-label">Khách hàng</span> </a> </li>
                     <li>
                         <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Graphs</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
@@ -66,8 +69,12 @@
                             <li><a href="email_template.html">Email templates</a></li>
                         </ul>
                     </li>
-                    <li> <a href="metrics.html"><i class="fa fa-pie-chart"></i> <span class="nav-label">Metrics</span>  </a> </li>
-                    <li> <a href="widgets.html"><i class="fa fa-flask"></i> <span class="nav-label">Widgets</span></a> </li>
+                    <li>
+                     <a href="metrics.html"><i class="fa fa-pie-chart"></i> <span class="nav-label">Metrics</span>  </a> 
+                    </li>
+                    <li>
+                     <a href="widgets.html"><i class="fa fa-flask"></i> <span class="nav-label">Widgets</span></a> 
+                    </li>
                     <li>
                         <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Forms</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
@@ -160,7 +167,9 @@
                             <li><a href="badges_labels.html">Badges, Labels, Progress</a></li>
                         </ul>
                     </li>
-                    <li> <a href="grid_options.html"><i class="fa fa-laptop"></i> <span class="nav-label">Grid options</span></a> </li>
+                    <li>
+                     <a href="grid_options.html"><i class="fa fa-laptop"></i> <span class="nav-label">Grid options</span></a> 
+                    </li>
                     <li>
                         <a href="#"><i class="fa fa-table"></i> <span class="nav-label">Tables</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
@@ -206,9 +215,15 @@
                             <li> <a href="#">Second Level Item</a></li>
                         </ul>
                     </li>
-                    <li> <a href="css_animation.html"><i class="fa fa-magic"></i> <span class="nav-label">CSS Animations </span><span class="label label-info pull-right">62</span></a> </li>
-                    <li class="landing_link"> <a target="_blank" href="landing.html"><i class="fa fa-star"></i> <span class="nav-label">Landing Page</span> <span class="label label-warning pull-right">NEW</span></a> </li>
-                    <li class="special_link"> <a href="package.html"><i class="fa fa-database"></i> <span class="nav-label">Package</span></a> </li>
+                    <li>
+                     <a href="css_animation.html"><i class="fa fa-magic"></i> <span class="nav-label">CSS Animations </span><span class="label label-info pull-right">62</span></a> 
+                    </li>
+                    <li class="landing_link">
+                     <a target="_blank" href="landing.html"><i class="fa fa-star"></i> <span class="nav-label">Landing Page</span> <span class="label label-warning pull-right">NEW</span></a> 
+                    </li>
+                    <li class="special_link">
+                     <a href="package.html"><i class="fa fa-database"></i> <span class="nav-label">Package</span></a>
+                     </li>
                 </ul>
             </div>
         </nav>
